--- a/projects/gaia-gis/package.json
+++ b/projects/gaia-gis/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "geotiff": "^2.1.3",
     "ol": "^10.2.1",
+    "ol-hashed": "^2.1.0",
     "tslib": "^2.3.0"
   },
   "sideEffects": false
