--- a/projects/gaia-gis/package.json
+++ b/projects/gaia-gis/package.json
@@ -5,6 +5,7 @@
     "@angular/common": "^18.2.0",
     "@angular/core": "^18.2.0"
   },
+  "description": "GaiaGisService is an Angular library that simplifies the integration of interactive maps using OpenLayers. It allows for visualizing raster maps, adding custom points, and adjusting views easily, making it ideal for developers who need to implement geospatial features in their web applications.",
   "dependencies": {
     "geotiff": "^2.1.3",
     "ol": "^10.2.1",
@@ -12,5 +13,22 @@
     "tslib": "^2.3.0"
   },
   "sideEffects": false,
-  "license":"AGPL-3.0-only"
+  "license":"AGPL-3.0-only",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Olympus-Analytics/ngx-gaia-gis.git"
+  },
+  "keywords": [
+    "Angular",
+    "GIS",
+    "Maps",
+    "Geotiff",
+    "COG-Geotiff",
+    "OpenLayers",
+    "Gaia-GIS"
+  ],
+  "author": "We are Olympus Analytics, and our email is contactanos@olympus-analytics.dev",
+  "bugs": {
+    "url": "https://github.com/Olympus-Analytics/ngx-gaia-gis/issues"
+  }
 }
