--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^19.0.1",
     "@angular/router": "^19.0.1",
     "geotiff": "^2.1.3",
+    "jspdf": "^2.5.2",
     "ol": "^10.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
