--- a/documentation/package.json
+++ b/documentation/package.json
@@ -13,5 +13,8 @@
     "@astrojs/starlight": "^0.29.2",
     "astro": "^4.16.10",
     "sharp": "^0.32.5"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.28.1"
   }
 }
