--- a/angular.json
+++ b/angular.json
@@ -60,6 +60,7 @@
               }
             ],
             "styles": [
+              "node_modules/ol/ol.css",
               "projects/demo/src/styles.css"
             ],
             "scripts": []
