--- a/projects/gaia-gis/package.json
+++ b/projects/gaia-gis/package.json
@@ -2,8 +2,8 @@
   "name": "ngx-gaia-gis",
   "version": "1.0.5-2",
   "peerDependencies": {
-    "@angular/common": "^19.0.1",
-    "@angular/core": "^19.0.1",
+    "@angular/common": ">=20.0.0 <21.0.0",
+    "@angular/core": ">=20.0.0 <21.0.0",
     "geotiff": "^2.1.3",
     "jspdf": "^2.5.2",
     "ol": "^10.3.0",
